# sudo-GUI

./: README.md  environment.yml  pyproject.toml
sudo_gui/: __init__.py  app.py  color_utils.py  constants.py  main_window.py  parser.py
sudo_gui/delegates/: __init__.py  alias_type.py  bool_combo.py  value_delegate.py
sudo_gui/tabs/: __init__.py  alias_tab.py  defaults_tab.py  list_tab.py  plugins_tab.py
sudo_gui/widgets/: __init__.py  secure_path.py
